add config unpacker

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,5 +2,6 @@
 
 export(rdi_detect_data_types)
 export(rdi_index)
+export(rdi_system_config_unpack)
 export(read_rdi)
 useDynLib(readrdi, .registration = TRUE)
